@@ -20,7 +20,8 @@ class TargetSource(zc.sourcefactory.basic.BasicSourceFactory):
         return self.values.get(value, value)
 
 
-class ILink(zope.interface.Interface):
+class ILink(zeit.cms.content.interfaces.ICommonMetadata,
+            zeit.cms.content.interfaces.IXMLContent):
     """A type for managing links to non-local content."""
 
     url = zope.schema.URI(title=_(u"Link address"))
